--- a/Prototype/css/style.css
+++ b/Prototype/css/style.css
@@ -1,7 +1,9 @@
 /* ________________________________________ Table of Contents
 
 Global
-Home & Nav
+Header &	Navigation
+
+Home
 Chord Changes
 Songs
 	Song List
@@ -12,82 +14,95 @@ ___________________________________________ Global */
 
 @import url(http://fonts.googleapis.com/css?family=Source+Serif+Pro:400,600,700|Roboto+Condensed:400,700,300);
 
-*{
-	margin:	0px;
-	border:	0px;
-	padding: 0px;
-}
 
-body{
-	background-color:#eee;
+html, body {
+	height: 100%;
+	margin: 0px;
+	background-color: #eee;
 	font-family: 'Source Serif Pro', serif;
 }
 
+
 a{
-	color: #222;
+	color: #333;
 	text-decoration: none;
 }
+
+/* reset margins */
+h1, h2, h3, h4, ul, li, p	{ margin:0px; padding: 0px;}
+
+
+/* ___________________________________________ Header &	Navigation */
+
 header{
-	display: flex;
-	align-items:flex-start;
-	margin-bottom: 1em;
+	display:flex;
+	flex-flow: row nowrap;
+	justify-content: center;
+	align-items: baseline;
+	padding: .5em 1em;
+}
+
+header div{
+	flex: 1 1 100%;
+	order:2;
+	text-align: center;
+}
+header #back{
+	max-width: 1.5em;
+	order:1;
+	margin-right: auto;
+}
+header #addEdit, .addEdit, #blank	{
+	max-width: 1.5em;
+	order:3;
+	margin-right: auto;
 }
 
 
-hgroup	{text-align:center;}
-h1			{font-size: 1.75em; font-weight: 600;}
-h2, h3	{font-size: .875em; font-weight: 400;}
-h4 		{font-size: .875em; font-weight: 400;text-align: center;}
-
-header hgroup		{flex:1; order:2;}
-#back					{order:1; width:24px; margin: .5em 0em 0em .5em;}
-#addEdit, #blank	{order:3; width:24px; margin: .5em .5em 0em 0;}
-#next, #complete	{margin-top:1em; display: flex; justify-content: center;}
+h1			{ font-size: 1.75em; font-weight: 600; }
+h2, h3	{ font-size: .875em; font-weight: 400; }
+h4 		{ font-size: .875em; font-weight: 400; text-align: center; }
 
 
+/* ___________________________________________ Home */
 
-/* ________________________________________ Home &	Nav */
-.navLg{
-	box-sizing: border-box;
-	width: 95%;
-	height: 20%;
-	margin: 20px auto;
-	padding: 10% 0;
+#homeNav {
+	min-height: 100%;
+	display: flex;
+	flex-flow: column;
+}
+
+#homeNav > a {
+	flex: 1;
+	margin: 1em;
+	padding: 1em;
 	background: #fff;
 	border: 1px solid #ddd;
-}
-
-.h2{
-	font-family: Verdana, sans-serif;
-	font-size: 2em;
 	text-align: center;
-	display: block;
-}
 
-.navLg img{
-	display:block;
-	width: 60px;
-	margin: 20px auto;
-}
-
-
-/* ________________________________________ Chord Changes */
-
-
-/* ________________________________________ Songs */
-
-/*	---------------- Songs List */
-
-#songList li{
-   display: flex;
-	padding: 1em;
-	border-bottom: 1px solid #aaa;
+	display: flex;
+	flex-flow: column;
+	justify-content: center;
 	align-items: center;
 }
 
-#songList li:hover{
-	background-color: #fff;
-	cursor: pointer;
+#homeNav > a:last-of-type {
+	margin-top: 0em;
+}
+
+#homeNav h1{
+	margin-bottom: 1em;
+}
+
+/* ___________________________________________ Songs */
+/*	---------------- Songs List */
+
+#songList li{
+	display: flex;
+	align-items: center;
+	border-bottom: 1px solid #aaa;
+	padding: 1em;
+	list-style-type: none;
 }
 
 #songList li:first-child{
@@ -95,21 +110,15 @@ header hgroup		{flex:1; order:2;}
 }
 
 #songList img{
-	width: 1em;
+	margin-left: auto;
+	height: 1.5em;
 }
 
-#songList img[src*=pixel]{
-	display: none;
-}
-
-.songId{
-	flex:1;
-}
-.songId p:first-of-type{
+#songList p:first-of-type{
 	font-size: 1.25em;
 }
 
-.songId p:last-of-type{
+#songList p:last-of-type{
 	font-size: .8125em;
 	color:#555;
 	line-height: 1.75em;
@@ -117,42 +126,38 @@ header hgroup		{flex:1; order:2;}
 
 /*	---------------- Songs Details */
 
-
 .chordSection, #strum{
-	padding: .5em 1em;
+	padding: 0em 1em 1em 1em;
 }
 
 .barContainer{
 	font-family: 'Roboto Condensed';
 	font-size: 1.75em;
 	display: flex;
-	flex-wrap: wrap;
+	flex-flow: row wrap;
 }
 
 .barContainer ul{
 	display: flex;
 	justify-content: center;
-	width: 90px;
+	width: 86px;
 	border-left: 1px solid #CCC;
-	margin-top: .25em;
-	margin-bottom: .25em;
-	padding-top: .2em;
-	padding-bottom:.05em;
+	margin: .25em 0em;
+	padding: .2em 0em;
 }
 
 .barContainer ul:last-of-type{
 	border-right: 1px solid #CCC;
 }
 
-.barContainer li{
-	display: block;
-	float:left;
+.barContainer li, #strum li{
+	display: flex;
+	flex-flow: column;
 	list-style-type: none;
 	text-align: center;
 }
 
 .barContainer sub{
-	display: block;
 	font-size: .375em;
 	margin-top: -.625em;
 }
@@ -160,116 +165,98 @@ header hgroup		{flex:1; order:2;}
 #strum ul{
 	display: flex;
 	justify-content: center;
-	margin-top: .5em;
+	margin-top: 1em;
 }
 
 #strum li{
-	display: block;
-	float:left;
-	list-style-type: none;
-	text-align: center;
-	margin: 0 .0625em;
-}
-
-#strum sub{
-	display: block;
-	margin-top: -.125em;
+	margin: 0em .0625em;
 }
 
 /*	---------------- New Song */
+
 #newSong{
 	display: flex;
 	flex-flow: column;
+	align-items:center;
+	min-width: 100%;
 }
 
-
-
 #newSong input{
-	flex: 1;
-	background: none;
+	width: 100%;
+	background-color: #fafafa;
 	font-family: 'Source Serif Pro', serif;
 	font-size: 2.5em;
 	text-align: center;
-	line-height: 2em;
+	margin-bottom: .25em;
+	border:0em;
 }
 
-#newSong input:focus{
-	color: orange;
-}
-
-/* keep labels for Capo &	BPM */
-#newSong div{
+#newSong > div{
 	display: flex;
+	align-items: baseline;
+	width: 100%;
+}
+
+#newSong > div > input{
+	flex: 1 1 100%;
+	width: 100%;
+	border:0em;
+	text-align: right;
+}
+
+.inputLabel{
+	flex: 1 1 100%;
+	background-color: #fafafa;
+	border-left: none;
+	font-family: 'Source Serif Pro', serif;
+	font-size: 2.5em;
+	padding: 1px 0;
+}
+
+
+#newSongBars{
+	margin-left: 1em;
+	margin-right: 1em;
+}
+
+.newSongSection{
+	display: flex;
+	flex-flow: row wrap;
 	justify-content: center;
 }
 
-#newSong div input{
-	width: 100px;
-	flex: none;
+.newBarGroup{
+	padding: .2em;
+	margin:.2em;
+	background-color: #ddd;
+	display: flex;
+	flex-flow: row wrap;
+	justify-content: center;
 }
 
-#newSong div span{
-	font-family: serif;
-	font-size: 2.5em;
-	line-height: 2em;
+.newBarGroup:last-of-type{
+	width: 16.7em;
+	height: 2.9em;
+	align-items: center;
 }
 
-#newSong ul{
-	width: 180px;
-}
-
-#newSong select{
+.newBarGroup select{
 	font-family: 'Roboto Condensed', serif;
-	font-size: .625em;
+	font-size: 1.2em;
 	height: 2em;
-	width:45px;
 	padding:0px;
+	border: 0px;
+	margin:.2em;
 }
 
-/* ________________________________________ @ Media */
-
-@media (min-width: 600px) {
-	#songList ul{
-		display: flex;
-		flex-direction: row;
-		flex-wrap: wrap;
-		justify-content: center;
-	}
-	#songList li{
-		display: flex;
-		flex-direction: column;
-		max-width: 10%;
-		min-width: 100px;
-		margin:.2em;
-		padding: .5em;
-		background:white;
-		text-align: center;
-   	border: 1px solid #aaa;
-   }
-   #songList img[src*=next]{
-   	display: none;
-   }
-	#songList img[src*=pixel]{
-		display: block;
-		width:100%;
-		margin-bottom: .5em;
-		margin-right: 0px;
-	}
-	.barContainer{
-		justify-content: center;
-		font-size: 2.125em;
-	}
-	.barContainer ul{
-		width: 100px;
-	}
+#dragStrum{
+	display: flex;
+	flex-flow: row nowrap;
+	justify-content: center;
 }
 
-@media (min-width: 1024px) {
-	.barContainer{
-		justify-content: center;
-		font-size: 2.5em;
-	}
-	.barContainer ul{
-		width: 140px;
-	}
+#dragTarget{
+	width: 400px;
+	height: 2.9em;
+	background-color: #ddd;
 }
