--- a/Prototype/css/style.css
+++ b/Prototype/css/style.css
@@ -282,14 +282,15 @@ h4 			{ font-size: .875em; font-weight: 400; text-align: center; }
 	display: flex;
 	width: 167px;
 	height: 167px;
+	cursor: pointer;
 }
 
 
-#timer img{
+#toggleTxt{
 	z-index: 0;
 }
 
-#timeValue{
+#startReset{
 	z-index: 1;
 	position: absolute;
 	top:0;
@@ -336,12 +337,26 @@ h4 			{ font-size: .875em; font-weight: 400; text-align: center; }
 	font-size: 1.75em;
 }
 
-.overlay{
+.overlayContainer{
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	position: fixed;
+	top:0;
+	left:0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(255,255,255,.5);
 	z-index: 1000;
+}
+
+.hidden{
+	visibility: hidden;
+}
+.overlay{
 	background-color: #fff;
 	border: 1px solid #aaa;
-	box-shadow: 0px 0px 10px rgba(0,0,0,.25);
-	margin: auto;
+	box-shadow: 0px 0px 20px rgba(0,0,0,.15);
 	padding: 1em;
 	display: flex;
 	flex-flow: column nowrap;
