--- a/Prototype/css/style.css
+++ b/Prototype/css/style.css
@@ -14,6 +14,7 @@ ___________________________________________ Global */
 @import url(http://fonts.googleapis.com/css?family=Source+Serif+Pro:400,600,700|Roboto+Condensed:300,400,700);
 
 
+
 html, body {
 	height: 100%;
 	margin: 0px;
@@ -280,14 +281,28 @@ h4 			{ font-size: .875em; font-weight: 400; text-align: center; }
 	z-index: 0;
 	position: relative;
 	display: flex;
-	width: 167px;
-	height: 167px;
+	width: 174px;
+	height: 174px;
 	cursor: pointer;
+
 }
 
+#timer canvas{
+	z-index: 0;
+	position: absolute;
+	top:0;
+	left:0;
+	width: 174px;
+	height: 174px;
+}
 
 #toggleTxt{
 	z-index: 0;
+	position: absolute;
+	top:0;
+	left:0;
+	width: 174px;
+	height: 174px;
 }
 
 #startReset{
@@ -295,8 +310,8 @@ h4 			{ font-size: .875em; font-weight: 400; text-align: center; }
 	position: absolute;
 	top:0;
 	left:0;
-	width: 167px;
-	height: 167px;
+	width: 174px;
+	height: 174px;
 	font-family: 'Roboto Condensed', sans-serif;
 	font-size: 3.5em;
 	font-weight: 400;
@@ -305,6 +320,11 @@ h4 			{ font-size: .875em; font-weight: 400; text-align: center; }
 	flex-flow: column;
 	justify-content: center;
 	align-items: center;
+
+}
+
+#timeValue{
+	margin-top: 5px;
 }
 
 /*	---------------- Records */
