--- a/Prototype/css/style.css
+++ b/Prototype/css/style.css
@@ -102,7 +102,7 @@ h4 			{ font-size: .875em; font-weight: 400; text-align: center; }
 /* ___________________________________________ Songs */
 /*	---------------- Songs List */
 
-#songList li{
+#songList_ul li{
 	display: flex;
 	align-items: center;
 	border-bottom: 1px solid #aaa;
@@ -110,20 +110,20 @@ h4 			{ font-size: .875em; font-weight: 400; text-align: center; }
 	list-style-type: none;
 }
 
-#songList li:first-child{
+#songList_ul li:first-child{
 	border-top: 1px solid #aaa;
 }
 
-#songList img{
+#songList_ul img{
 	margin-left: auto;
 	height: 1.5em;
 }
 
-#songList p:first-of-type{
+#songList_ul p:first-of-type{
 	font-size: 1.25em;
 }
 
-#songList p:last-of-type{
+#songList_ul p:last-of-type{
 	font-size: .8125em;
 	color:#555;
 	line-height: 1.75em;
@@ -131,18 +131,26 @@ h4 			{ font-size: .875em; font-weight: 400; text-align: center; }
 
 /*	---------------- Songs Details */
 
+#song_container{
+	display: flex;
+	flex-flow: column;
+	align-items: center;
+	justify-content: center;
+}
+
 .chordSection, #strum{
 	padding: 0em 1em 1em 1em;
 }
 
-.barContainer{
+.bars{
 	font-family: 'Roboto Condensed';
 	font-size: 1.75em;
 	display: flex;
 	flex-flow: row wrap;
+	justify-content: center;
 }
 
-.barContainer ul{
+.bars ul{
 	display: flex;
 	justify-content: center;
 	width: 86px;
@@ -151,29 +159,29 @@ h4 			{ font-size: .875em; font-weight: 400; text-align: center; }
 	padding: .2em 0em;
 }
 
-.barContainer ul:last-of-type{
+.bars ul:last-of-type{
 	border-right: 1px solid #CCC;
 }
 
-.barContainer li, #strum li{
+.bars li, #strum_container li{
 	display: flex;
 	flex-flow: column;
 	list-style-type: none;
 	text-align: center;
 }
 
-.barContainer sub{
+.bars sub{
 	font-size: .375em;
 	margin-top: -.625em;
 }
 
-#strum ul{
+#strum_container ul{
 	display: flex;
 	justify-content: center;
 	margin-top: 1em;
 }
 
-#strum li{
+#strum_container li{
 	margin: 0em .0625em;
 }
 
@@ -269,7 +277,7 @@ h4 			{ font-size: .875em; font-weight: 400; text-align: center; }
 
 /* ___________________________________________ Chord Changes */
 
-#chords{
+#chordChg{
 	display: flex;
 	flex-flow: column;
 	align-items: center;
@@ -384,7 +392,7 @@ h4 			{ font-size: .875em; font-weight: 400; text-align: center; }
 	align-items: center;
 }
 
-#chords select{
+#chordChg select{
 	font-family: 'Roboto Condensed', serif;
 	font-size: 1.75em;
 	height: 2em;
@@ -393,7 +401,7 @@ h4 			{ font-size: .875em; font-weight: 400; text-align: center; }
 	margin:.2em;
    background-color: #fff;
 }
-#chords button{
+#chordChg button{
   font-family: 'Roboto Condensed', serif;
   font-size: 1.2em;
   padding: .5em  1em;
