--- a/WebApp/styles/mixins.less
+++ b/WebApp/styles/mixins.less
@@ -2,6 +2,17 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700");
 @import url("https://fonts.googleapis.com/css?family=Source+Code+Pro");
 
+/*
+
+H1: Page Title
+H2: Page Sub-Title 1
+H3: Page Sub-Title 2
+H4: Section Header
+H5: Label
+H6: Description
+
+*/
+
 //                          COLORS
 
 @black: #263238;
@@ -60,6 +71,7 @@
     font-size: 36/16em;
 }
 
+//                             FIX THIS
 .f-counter(lg){
     font-size: 80/16em;
 }
