--- a/WebApp/styles/styles.css
+++ b/WebApp/styles/styles.css
@@ -1,8 +1,28 @@
+/*
+
+H1: Page Title
+H2: Page Sub-Title 1
+H3: Page Sub-Title 2
+H4: Section Header
+H5: Label
+H6: Description
+
+*/
 @import url("https://fonts.googleapis.com/css?family=Lobster");
 
 @import url("https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700");
 
 @import url("https://fonts.googleapis.com/css?family=Source+Code+Pro");
+/*
+
+H1: Page Title
+H2: Page Sub-Title 1
+H3: Page Sub-Title 2
+H4: Section Header
+H5: Label
+H6: Description
+
+*/
 .f-lobster {
   font-family: 'Lobster', cursive;
 }
