--- a/WebApp/styles/mixins.css
+++ b/WebApp/styles/mixins.css
@@ -23,27 +23,17 @@ H5: Label
 H6: Description
 
 */
+.shadow {
+  box-shadow: 0rem 0rem 0.5rem #000000;
+}
 .f-lobster {
   font-family: 'Lobster', cursive;
+  -webkit-font-smoothing: antialiased;
 }
 .f-roboto {
   font-family: 'Roboto Condensed', sans-serif;
+  font-weight: 400;
 }
 .f-mono {
   font-family: 'Source Code Pro', monospace;
-}
-.f-title {
-  font-family: 'Lobster', cursive;
-  font-size: 2.25em;
-  text-align: center;
-}
-.f-sml {
-  font-family: 'Roboto Condensed', sans-serif;
-  font-size: 1em;
-}
-.f-section {
-  font-family: 'Roboto Condensed', sans-serif;
-  font-weight: 700;
-  font-size: 1em;
-  text-transform: uppercase;
 }
