--- a/WebApp/styles/styles.css
+++ b/WebApp/styles/styles.css
@@ -23,27 +23,219 @@ H5: Label
 H6: Description
 
 */
+.shadow {
+  box-shadow: 0rem 0rem 0.5rem #000000;
+}
 .f-lobster {
   font-family: 'Lobster', cursive;
+  -webkit-font-smoothing: antialiased;
 }
 .f-roboto {
   font-family: 'Roboto Condensed', sans-serif;
+  font-weight: 400;
 }
 .f-mono {
   font-family: 'Source Code Pro', monospace;
 }
-.f-title {
+* {
+  box-sizing: border-box;
+  text-decoration: none;
+  margin: 0;
+  padding: 0;
+}
+body.bg_primary {
+  background: linear-gradient(55deg, #000000, #37474f);
+}
+body.bg_exercise {
+  background: linear-gradient(55deg, #ef5350, #ffcc80);
+}
+body.bg_song {
+  background: linear-gradient(55deg, #006064, #4db6ac);
+}
+body.bg_photo {
+  background-image: url('../img/bg_amp.jpg');
+  background-size: cover;
+  background-position: top center;
+}
+body {
+  padding: 0.75rem 1.5rem 0 1.5rem;
+}
+h1 {
   font-family: 'Lobster', cursive;
+  -webkit-font-smoothing: antialiased;
   font-size: 2.25em;
   text-align: center;
+  color: #f5f5f5;
 }
-.f-sml {
+h2,
+h3 {
   font-family: 'Roboto Condensed', sans-serif;
+  font-weight: 400;
   font-size: 1em;
+  color: #f5f5f5;
+  text-align: center;
 }
-.f-section {
+h4 {
   font-family: 'Roboto Condensed', sans-serif;
+  font-weight: 400;
   font-weight: 700;
   font-size: 1em;
   text-transform: uppercase;
+  text-align: center;
+  color: #ef5350;
+}
+h5 {
+  font-family: 'Roboto Condensed', sans-serif;
+  font-weight: 400;
+  font-size: 1.5em;
+  color: #0097a7;
+}
+*,
+h6 {
+  font-family: 'Roboto Condensed', sans-serif;
+  font-weight: 400;
+  font-size: 1em;
+  color: #263238;
+  line-height: 1.5em;
+}
+button {
+  width: 100%;
+  height: 3rem;
+  margin: 1.5em 0;
+  vertical-align: middle;
+  font-family: 'Roboto Condensed', sans-serif;
+  font-weight: 400;
+  font-size: 1.25em;
+  color: #0097a7;
+  text-align: center;
+  background-color: #000;
+  border: 3px solid #0097a7;
+  border-radius: 1.5em;
+  cursor: pointer;
+}
+a {
+  display: inline-block;
+  font-family: 'Roboto Condensed', sans-serif;
+  font-weight: 400;
+  font-size: 1em;
+  color: #0097a7;
+  line-height: 1.5em;
+}
+header a {
+  position: absolute;
+  top: 1.5rem;
+  left: 1.5rem;
+}
+footer {
+  margin-top: 1.5rem;
+  font-family: 'Roboto Condensed', sans-serif;
+  font-weight: 400;
+  font-size: 1em;
+  color: #f5f5f5;
+  text-align: center;
+  text-align: center;
+  opacity: .25;
+}
+ul {
+  list-style-type: none;
+  margin: 3.75rem 0;
+}
+ul li {
+  transition: background-color 0.3s;
+  background-color: #f5f5f5;
+  margin-bottom: 0.375rem;
+  position: relative;
+  border-radius: 0.25rem;
+  box-shadow: 0rem 0rem 0.5rem #000000;
+}
+ul li:hover {
+  background-color: #fff;
+  transition: background-color 0.3s;
+}
+ul li a {
+  display: flex;
+  flex-wrap: wrap;
+}
+ul li img {
+  width: 2rem;
+  height: 2rem;
+  flex: 0 1 auto;
+}
+ul.landing a {
+  padding: 1.5rem;
+}
+ul.landing img {
+  margin-right: 0.75rem;
+  order: 1;
+}
+ul.landing div {
+  order: 2;
+}
+ul.list a {
+  align-items: center;
+  padding: 1rem 1.5rem;
+}
+ul.list img {
+  flex: 0 1 auto;
+  order: 3;
+  margin-left: 0.75rem;
+}
+ul.list h5 {
+  flex: 1 1 auto;
+  order: 1;
+}
+ul.list h6 {
+  flex: 0 1 auto;
+  order: 2;
+  font-family: 'Roboto Condensed', sans-serif;
+  font-weight: 400;
+  font-size: 1.5em;
+  color: #263238;
+}
+.fab a {
+  position: absolute;
+  right: 2rem;
+  bottom: 2rem;
+  width: 3.75rem;
+  height: 3.75rem;
+  border-radius: 50%;
+  background-color: #ef5350;
+  box-shadow: 0rem 0rem 0.5rem #000000;
+  z-index: 1000;
+  transition: width 0.35s, height 0.35s, background-color 0.35s, border-radius 0.2s;
+}
+.fab:hover a {
+  right: 0rem;
+  bottom: 0rem;
+  width: 100%;
+  height: 100%;
+  border-radius: 0px;
+  background: linear-gradient(55deg, #ef5350, #ffcc80);
+}
+.fab:hover a img {
+  display: none;
+}
+#login h1 {
+  font-size: 5.25em;
+  line-height: 5.5rem;
+  mix-blend-mode: exclusion;
+  margin: 3rem 0 3.75rem 0;
+}
+#login input {
+  width: 100%;
+  height: 3rem;
+  padding: 1.5rem;
+  margin-bottom: 0.75rem;
+  font-family: 'Roboto Condensed', sans-serif;
+  font-weight: 400;
+  font-size: 1.25em;
+  color: #263238;
+  text-align: center;
+  background-color: #f5f5f5;
+  border: none;
+  border-radius: 1.5rem;
+}
+#login a {
+  text-align: center;
+  width: 100%;
 }
