--- a/WebApp/styles/styles.less
+++ b/WebApp/styles/styles.less
@@ -1,1 +1,184 @@
 @import 'mixins.less';
+
+*{
+    box-sizing: border-box;
+    text-decoration: none;
+    margin:0;
+    padding:0;
+}
+
+body{
+    &.bg_primary    {   .gradient(gray);    }
+    &.bg_exercise   {   .gradient(orange);  }
+    &.bg_song       {   .gradient(blue);    }
+    &.bg_photo      {   .gradient(guitar);  }
+}
+
+body{
+    padding: 12/16rem 24/16rem 0 24/16rem;
+}
+
+h1              { .f-title; }
+h2, h3          { .f-sml; }
+h4              { .f-section; }
+h5              { .f-label; }
+*, h6           { .f-detail; }
+
+button{
+    width: 100%;
+    height: 48/16rem;
+    margin: 24/16em 0;
+    vertical-align: middle;
+    .f-button;
+    background-color: #000;
+    border: 3px solid @teal;
+    border-radius: 24/16em;
+    cursor: pointer;
+}
+
+a{
+    display: inline-block;
+    .f-detail(@teal);
+}
+
+header a{
+    position: absolute;
+    top:24/16rem;
+    left:24/16rem;
+}
+
+
+footer{
+    margin-top: 24/16rem;
+    .f-sml;
+    text-align: center;
+    opacity: .25;
+}
+
+//                          COMPONENTS
+
+ul{
+    list-style-type: none;
+    margin: 60/16rem 0;
+
+    li{
+        transition: background-color .3s;
+        background-color: @white;
+        margin-bottom: 6/16rem;
+        position: relative;
+        border-radius: 4/16rem;
+        .shadow;
+        &:hover{
+            background-color: #fff;
+            transition: background-color .3s;
+        }
+
+        a{
+            display: flex;
+            flex-wrap: wrap;
+
+        }
+
+        img{
+            width: 32/16rem;
+            height: 32/16rem;
+            flex:0 1 auto;
+        }
+    }
+
+    &.landing{
+        a{
+            padding: 24/16rem;
+        }
+
+        img{
+            margin-right: 12/16rem;
+            order:1;
+        }
+
+        div{
+            order:2;
+        }
+    }
+
+    &.list{
+        a{
+            align-items: center;
+            padding: 1rem 24/16rem;
+        }
+
+        img{
+            flex:0 1 auto;
+            order:3;
+            margin-left: 12/16rem;
+        }
+
+        h5{
+            flex:1 1 auto;
+            order:1;
+        }
+
+        h6{
+            flex:0 1 auto;
+            order:2;
+            .f-label(@black);
+        }
+    }
+}
+
+.fab {
+    a{
+    	position: absolute;
+    	right: 32/16rem;
+    	bottom: 32/16rem;
+    	width:60/16rem;
+    	height: 60/16rem;
+    	border-radius:50%;
+    	background-color: @red;
+    	.shadow;
+        z-index: 1000;
+        transition: width .35s,
+    				height .35s,
+    				background-color .35s,
+    				border-radius .2s;
+    }
+	&:hover a{
+        right: 0rem;
+        bottom: 0rem;
+		width:100%;
+		height:100%;
+		border-radius: 0px;
+		.gradient(orange);
+        img{
+            display: none;
+        }
+	}
+}
+
+//                          LOGIN
+
+#login{
+    h1{
+        font-size: 84/16em;
+        line-height: 88/16rem;
+        mix-blend-mode: exclusion;
+        margin: 48/16rem 0 60/16rem 0;
+
+    }
+
+    input{
+        width: 100%;
+        height: 48/16rem;
+        padding: 24/16rem;
+        margin-bottom: 12/16rem;
+        .f-button(@black);
+        background-color: @white;
+        border: none;
+        border-radius: 24/16rem;
+    }
+
+    a{
+        text-align: center;
+        width: 100%;
+    }
+}
