--- a/WebApp/styles/styles.css
+++ b/WebApp/styles/styles.css
@@ -57,8 +57,15 @@ body.bg_photo {
   background-size: cover;
   background-position: top center;
 }
+body.bg_white h1 {
+  color: #263238;
+}
+body.bg_white h2,
+body.bg_white h3 {
+  color: #263238;
+}
 body {
-  padding: 0.75rem 1.5rem 0 1.5rem;
+  padding: 0.75rem 0.375rem 0 0.375rem;
 }
 h1 {
   font-family: 'Lobster', cursive;
@@ -171,26 +178,39 @@ ul.landing img {
 ul.landing div {
   order: 2;
 }
-ul.list a {
+ul.exercises a {
   align-items: center;
   padding: 1rem 1.5rem;
 }
-ul.list img {
+ul.exercises img {
   flex: 0 1 auto;
   order: 3;
   margin-left: 0.75rem;
 }
-ul.list h5 {
+ul.exercises h5 {
   flex: 1 1 auto;
   order: 1;
 }
-ul.list h6 {
+ul.exercises h6 {
   flex: 0 1 auto;
   order: 2;
   font-family: 'Roboto Condensed', sans-serif;
   font-weight: 400;
   font-size: 1.5em;
   color: #263238;
+}
+ul.songs a {
+  align-items: center;
+  padding: 1rem 1.5rem;
+}
+ul.songs div {
+  flex: 1 1 auto;
+  order: 1;
+}
+ul.songs img {
+  flex: 0 1 auto;
+  order: 2;
+  margin-left: 0.75rem;
 }
 .fab a {
   position: absolute;
@@ -210,10 +230,23 @@ ul.list h6 {
   width: 100%;
   height: 100%;
   border-radius: 0px;
-  background: linear-gradient(55deg, #ef5350, #ffcc80);
 }
 .fab:hover a img {
   display: none;
+}
+.fab.exercises:hover a {
+  background: linear-gradient(55deg, #ef5350, #ffcc80);
+}
+.fab.songs:hover a {
+  background: linear-gradient(55deg, #006064, #4db6ac);
+}
+.fab img {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
 }
 #login h1 {
   font-size: 5.25em;
@@ -238,4 +271,53 @@ ul.list h6 {
 #login a {
   text-align: center;
   width: 100%;
+}
+#chordList {
+  position: relative;
+  margin-top: 3rem;
+}
+#sortType,
+#sortOrder {
+  font-family: 'Roboto Condensed', sans-serif;
+  font-weight: 400;
+  font-weight: 700;
+  font-size: 1em;
+  text-transform: uppercase;
+  text-align: center;
+  color: #ef5350;
+}
+#chordList #sortOverlay {
+  position: absolute;
+  z-index: 1000;
+  left: 0;
+  right: 0;
+  width: 14.25em;
+  padding: 1rem 1.5rem;
+  margin: auto;
+  background-color: #f5f5f5;
+  border-radius: 0.25rem;
+  box-shadow: 0rem 0rem 0.5rem #000000;
+}
+#chordList #sortOverlay label {
+  display: block;
+}
+#chordList #sortOverlay label.header {
+  font-family: 'Roboto Condensed', sans-serif;
+  font-weight: 400;
+  font-weight: 700;
+  font-size: 1em;
+  text-transform: uppercase;
+  text-align: center;
+  color: #263238;
+  text-align: left;
+}
+#chordList #sortOverlay label.radio {
+  padding: 0.75rem 0;
+  cursor: pointer;
+}
+#chordList #sortOverlay label input[type="radio"] {
+  margin: 0 1rem;
+}
+#chordList #sortOverlay label:nth-of-type(4) {
+  margin-top: 0.75rem;
 }
