Mobile Web App R1
• Updated Song Detail layout

--- a/WebApp/styles/mixins.less
+++ b/WebApp/styles/mixins.less
@@ -57,19 +57,19 @@ H6: Description
 }
 
 .f-mono{
-    font-family: monospace;
+    font-family: 'Source Code Pro', monospace;
 }
 
 .f-title(@color:@white){
     .f-lobster;
-    font-size: 36/16em;
+    font-size: 36/16rem;
     text-align: center;
     color:@color;
 }
 
 .f-sml(@color:@white){
     .f-roboto;
-    font-size: 1em;
+    font-size: 1rem;
     color:@color;
     text-align: center;
 }
@@ -77,7 +77,7 @@ H6: Description
 .f-section(@color:@red){
     .f-roboto;
     font-weight: 700;
-    font-size: 1em;
+    font-size: 1rem;
     text-transform: uppercase;
     text-align: center;
     color:@color;
@@ -85,7 +85,7 @@ H6: Description
 
 .f-button(@color:@teal){
     .f-roboto;
-    font-size: 20/16em;
+    font-size: 20/16rem;
     color:@color;
     text-align: center;
 }
